feat: add avatar

--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ body {
   flex-direction: column;
   justify-content: space-between;
   font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.5;
   min-height: 100vh;
   margin: 0;
   padding: 0;
@@ -48,3 +51,25 @@ html {
 .section-item a:hover {
   color: #4d2323;
 }
+
+.main-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.section {
+  width: 50%;
+}
+
+img {
+  max-width: 50%;
+  max-height: 50%;
+
+@media (max-width: 768px) {
+  .section {
+    width: 100%;
+  }
+}
+
+
+
