--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 html {
-  scroll-behavior: smooth; 
+  scroll-behavior: smooth;
 }
 
 body {
@@ -18,6 +18,7 @@ body {
   font-size: 18px;
   font-weight: 400;
   line-height: 1.5;
+  background-color: #2d2d30;
 }
 
 img {
@@ -32,7 +33,7 @@ img {
 }
 
 .header {
-  background-color: #524e72;
+  background-color: #1e1e1e;
 }
 
 .nav-list {
@@ -49,7 +50,7 @@ img {
   font-size: 20px;
   font-weight: 300;
   line-height: 50px;
-  color: #fff; 
+  color: #fff;
 }
 
 
@@ -73,19 +74,18 @@ img {
 
 
 .section-title {
-  margin-bottom: 20px;  
+  margin-bottom: 20px;
   font-size: 20px;
   font-weight: 400;
-  text-transform: uppercase;
   letter-spacing: 5px;
-  color: #524e72;
+  color: #fff;
 }
 
 
 
 .section-list {
   margin: 0;
-  padding: 0;  
+  padding: 0;
   list-style: none;
 }
 
@@ -95,28 +95,29 @@ img {
   margin-bottom: 10px;
   padding: 0;
   padding-left: 30px;
+  color: #fff;
+  text-decoration: none;
 }
 
 
 
 .section-item span {
-  color: #524e72;
+  color: #fff;
 }
 
 .section-item a {
   text-decoration: none;
-  color: #524e72;
+  color: #fff;
   transition: color 0.5s;
 }
 
 .section-item a:hover {
-  color: #524e72;
+  color: #fff;
 }
 
-
 .footer {
-  background-color: #524e72;
-  padding: 20px;  
+  background-color: #1e1e1e;
+  padding: 20px;
 }
 
 .footer-container {
@@ -133,6 +134,13 @@ img {
   line-height: 45px;
 }
 
+.rss {
+  width: 121px;
+  height: 45px;
+  background-image: url("./assets/img/favicon.ico");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
 
 @media (max-width: 1440px) {
   .container {
@@ -140,10 +148,9 @@ img {
   }
 }
 
-
 @media (max-width: 410px) {
   .main-title {
     font-size: 24px;
     letter-spacing: 4px;
-  }  
+  }
 }
