--- a/style.css
+++ b/style.css
@@ -53,18 +53,15 @@ img {
   color: #d6d6d6;
 }
 
-.main {
-  margin-bottom: auto;
-}
-
 .main-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  max-width: 1000px;
 }
 
 .section {
-  width: calc(50% - 20px);
+  width: 49%;
   padding: 10px;
   border-bottom: 1px solid #5c4218;
 }
